--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 + Media Queries for <Responsive Web Design> section
 + Service section icons animation
-- Service section icons content
++ Service section icons content
 + Background image dive effect
 + Section about
 + Smooth scrolling
